--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
